--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "test-jstransformer": "^1.0.0",
+    "test-jstransformer": "*",
     "xo": "*"
   },
   "scripts": {
